<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:orientation="vertical"
              android:theme="@style/Theme.AppCompat.Light.NoActionBar"
              tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_weight="2"
        android:background="#d4dcdc"
        android:focusable="false"
        android:fontFamily="SERIF"
        android:gravity="left"
        android:hint="@string/input"
        android:maxLines="4"
        android:nestedScrollingEnabled="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@android:color/black"
        android:textSize="38sp"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#d4dcdc"
        android:fontFamily="SERIF"
        android:gravity="center_vertical|right"
        android:hint="0"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="36sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button3"
            android:contextClickable="false"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="@string/del"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="7"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="4"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="1"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/openBracket"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="("
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="8"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="5"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="2"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="."
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/closeBracket"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text=")"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="9"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="6"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="3"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="="
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="@string/ac"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btnDevide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="/"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="*"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="onClicked"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="38sp"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
